1.waf透传功能 2.waf重试功能

--- a/src/main/resources/waf.properties
+++ b/src/main/resources/waf.properties
@@ -18,3 +18,6 @@ waf.client.socketTimeout=30000
 #加入trace能力
 waf.trace.enabled=${waf.trace.enabled}
 waf.zipkin.collector.host=${waf.zipkin.collector.host}
+
+#http status透传
+waf.exception.remote.httpstatus.proxy=false
