--- a/src/main/resources/waf.properties
+++ b/src/main/resources/waf.properties
@@ -21,3 +21,5 @@ waf.zipkin.collector.host=${waf.zipkin.collector.host}
 
 #http status透传
 waf.exception.remote.httpstatus.proxy=false
+#异常信息message提示信息
+waf.exception.friendly.disabled=false
