--- a/task-worker-media-transcode/src/main/resources/waf.properties
+++ b/task-worker-media-transcode/src/main/resources/waf.properties
@@ -25,3 +25,5 @@ waf.uc.cache.expire
 waf.uc.cache.maxSize
 //waf 安全控制开关
 waf.security.disabled=true
+#异常信息message提示信息
+waf.exception.friendly.disabled=false
