通知报表中心接口部分提交

--- a/src/main/filters/filter-preproduction.properties
+++ b/src/main/filters/filter-preproduction.properties
@@ -70,6 +70,12 @@ jdbc.question.url=jdbc:mysql:fabric://fabric.rds.sdp.nd:32272/preproduction_mysq
 jdbc.question.username=user_uv9kfbr1gx
 jdbc.question.password=LNPOME1b2a
 
+#报表库配置
+jdbc.report.driver=com.mysql.fabric.jdbc.FabricMySQLDriver
+jdbc.report.url=jdbc:mysql:fabric://fabric.rds.sdp.nd:32272/preproduction_mysql_esp_report?autoReconnect=true&fabricServerGroup=pre_all_group&fabricUsername=admin&fabricPassword=ZB5dGGTJtsC8t7OQ&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
+jdbc.report.username=user_tv5q9coxpw
+jdbc.report.password=GxwrQabyzd
+
 solr.zkHost=10.33.6.172:2181,10.33.6.173:2181,10.33.6.178:2181
 solr.server.urls=http://10.33.6.172/solr,http://10.33.6.173/solr,http://10.33.6.178/solr
 solr.collection=esp_release
@@ -107,6 +113,11 @@ c3p0.main.minPoolSize=20
 c3p0.question.initialPoolSize=20
 c3p0.question.maxPoolSize=120
 c3p0.question.minPoolSize=20
+
+#报表库连接池配置
+c3p0.report.initialPoolSize=20
+c3p0.report.maxPoolSize=120
+c3p0.report.minPoolSize=20
 
 #单元测试用户id（张磊userId）
 junit.userId=2107144081
