--- a/src/main/filters/filter-product.properties
+++ b/src/main/filters/filter-product.properties
@@ -73,6 +73,12 @@ jdbc.question.url=jdbc:mysql:fabric://fabric.rds.sdp.nd:32271/esp_product_questi
 jdbc.question.username=user_r5yg3imena
 jdbc.question.password=l6O1NJZsKX
 
+#报表库配置
+jdbc.report.driver=com.mysql.fabric.jdbc.FabricMySQLDriver
+jdbc.report.url=jdbc:mysql:fabric://fabric.rds.sdp.nd:32271/esp_report?fabricServerGroup=all_group&fabricUsername=admin&fabricPassword=ZB5dGGTJtsC8t7OQ&autoReconnect=true&useUnicode=true&characterEncoding=UTF8
+jdbc.report.username=user_bwv7tixj3m
+jdbc.report.password=j8zSh2u3yK
+
 #jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://221.228.89.10:3301/esp_product?user=user_2pguei76t9&password=xVlZrbeEXi&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 #jdbc.username=user_2pguei76t9
@@ -115,6 +121,11 @@ c3p0.main.minPoolSize=20
 c3p0.question.initialPoolSize=20
 c3p0.question.maxPoolSize=120
 c3p0.question.minPoolSize=20
+
+#报表库连接池配置
+c3p0.report.initialPoolSize=20
+c3p0.report.maxPoolSize=120
+c3p0.report.minPoolSize=20
 
 #单元测试用户id（张磊userId）
 junit.userId=2000178486
