--- a/src/main/filters/filter-ssdpressure.properties
+++ b/src/main/filters/filter-ssdpressure.properties
@@ -65,6 +65,12 @@ jdbc.question.url=jdbc:mysql://172.24.133.178:3301/pressure_mysql_esp_question?u
 jdbc.question.username=user_JLTTWm66EY
 jdbc.question.password=R5Gz2P6Rl5
 
+#报表库配置
+jdbc.report.driver=com.mysql.fabric.jdbc.FabricMySQLDriver
+jdbc.report.url=jdbc\:mysql\:fabric\://qa1.rds.sdp.nd\:32271/qa_mysql_esp_report?fabricServerGroup\=my_group_3307&fabricUsername\=admin&fabricPassword\=ZB5dGGTJtsC8t7OQ&useUnicode=true&characterEncoding=utf-8
+jdbc.report.username=user_dzoqpi75e9
+jdbc.report.password=yJuYmxUh3j
+
 #jdbc.question.driver=com.mysql.fabric.jdbc.FabricMySQLDriver
 #jdbc.question.url=jdbc:mysql:fabric://qa1.rds.sdp.nd:32273/pressure_mysql_esp_question?autoReconnect=true&fabricServerGroup=my_group_3303&fabricUsername=admin&fabricPassword=bqTZDiWOW0sJmeM3&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 #jdbc.question.username=user_JLTTWm66EY
@@ -108,6 +114,11 @@ c3p0.main.minPoolSize=120
 c3p0.question.initialPoolSize=20
 c3p0.question.maxPoolSize=120
 c3p0.question.minPoolSize=20
+
+#报表库连接池配置
+c3p0.report.initialPoolSize=20
+c3p0.report.maxPoolSize=120
+c3p0.report.minPoolSize=20
 
 #单元测试用户id（张磊userId）
 junit.userId=2107190930
