--- a/src/main/resources/sdkdb/c3p0-config-main.properties
+++ b/src/main/resources/sdkdb/c3p0-config-main.properties
@@ -63,3 +63,36 @@ c3p0.question.propertyCycle=300
 c3p0.question.testConnectionOnCheckin=false
 c3p0.question.testConnectionOnCheckout=false
 c3p0.question.usesTraditionalReflectiveProxies=false
+
+
+#connection
+c3p0.report.driverClass=${jdbc.report.driver}
+c3p0.report.url=${jdbc.report.url}
+c3p0.report.user=${jdbc.report.username}
+c3p0.report.password=${jdbc.report.password}
+
+#init pool
+c3p0.report.initialPoolSize=${c3p0.report.initialPoolSize}
+c3p0.report.maxIdleTime=25000
+c3p0.report.maxPoolSize=${c3p0.report.maxPoolSize}
+c3p0.report.minPoolSize=${c3p0.report.minPoolSize}
+c3p0.report.acquireIncrement=50
+c3p0.report.acquireRetryDelay=1000
+c3p0.report.acquireRetryAttempts=30
+c3p0.report.maxStatements=0
+c3p0.report.maxStatementsPerConnection=0
+#heart beat
+c3p0.report.idleConnectionTestPeriod=30
+c3p0.report.breakAfterAcquireFailure=false
+c3p0.report.preferredTestQuery=select 1
+
+c3p0.report.autoCommitOnClose=false
+c3p0.report.automaticTestTable=fortest
+c3p0.report.checkoutTimeout=10000
+c3p0.report.maxIdleTimeExcessConnections=30
+c3p0.report.unreturnedConnectionTimeout=5000
+c3p0.report.numHelperThreads=3
+c3p0.report.propertyCycle=300
+c3p0.report.testConnectionOnCheckin=false
+c3p0.report.testConnectionOnCheckout=false
+c3p0.report.usesTraditionalReflectiveProxies=false
