--- a/src/main/filters/filter-test.properties
+++ b/src/main/filters/filter-test.properties
@@ -73,6 +73,12 @@ jdbc.question.url=jdbc\:mysql\:fabric\://qa1.rds.sdp.nd\:32271/qa_mysql_esp_quet
 jdbc.question.username=user_jr1bfiqyve
 jdbc.question.password=lDqbWkpLBH
 
+#报表库配置
+jdbc.report.driver=com.mysql.fabric.jdbc.FabricMySQLDriver
+jdbc.report.url=jdbc\:mysql\:fabric\://qa1.rds.sdp.nd\:32271/qa_mysql_esp_report?fabricServerGroup\=my_group_3307&fabricUsername\=admin&fabricPassword\=ZB5dGGTJtsC8t7OQ&useUnicode=true&characterEncoding=utf-8
+jdbc.report.username=user_dzoqpi75e9
+jdbc.report.password=yJuYmxUh3j
+
 solr.zkHost=172.24.133.11\:2181,172.24.133.21\:2181,172.24.133.31\:2181
 solr.server.urls=http\://172.24.133.11/solr,http\://172.24.133.21/solr,http\://172.24.133.31/solr
 solr.collection=assets_debug
@@ -109,6 +115,11 @@ c3p0.main.minPoolSize=20
 c3p0.question.initialPoolSize=20
 c3p0.question.maxPoolSize=120
 c3p0.question.minPoolSize=20
+
+#报表库连接池配置
+c3p0.report.initialPoolSize=20
+c3p0.report.maxPoolSize=120
+c3p0.report.minPoolSize=20
 
 #单元测试用户id（张磊userId）
 junit.userId=2107181030
