--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
 		            <groupId>org.apache.commons</groupId>
 		            <artifactId>commons-io</artifactId>
 				</exclusion>
-			</exclusions>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -221,13 +221,12 @@
 			<groupId>com.mysema.querydsl</groupId>
 			<artifactId>querydsl-jpa</artifactId>
 			<version>2.9.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>
-                guava
-            </artifactId>
-			<version>14.0.1</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>guava</artifactId>
+					<groupId>com.google.guava</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
@@ -279,7 +278,7 @@
 		<dependency>
 			<groupId>org.elasticsearch</groupId>
 			<artifactId>elasticsearch</artifactId>
-			<version>1.7.5</version>
+			<version>2.3.1</version>
 		</dependency>
 
 
