支持教学目标与知识库建立关系

--- a/src/main/resources/config/props/restype_corresponding_tablename.properties
+++ b/src/main/resources/config/props/restype_corresponding_tablename.properties
@@ -18,6 +18,7 @@ examinationpapers=examination_papers
 guidancebooks=teachingmaterials
 teachingactivities=teaching_activities
 tools=courseware_objects
+knowledgebases=knowledge_base
 
 ##SDK实体对象对应##
 assets_entity=Asset
