预生产与生产环境的ES连接由IP地址改为域名

--- a/src/main/filters/filter-product.properties
+++ b/src/main/filters/filter-product.properties
@@ -135,7 +135,7 @@ waf.trace.enabled=true
 waf.zipkin.collector.host=http://wuxi.zipkin.web.sdp:8080/
 
 #elasticsearch configure
-elasticsearch.domain=10.33.8.167
+elasticsearch.domain=elk-lcms.sdp
 elasticsearch.port=9300
 elasticsearch.cluster.name=wx-lcms-01
 elasticsearch.index.name=lcms_product_nd_education_resource
