--- a/src/main/filters/filter-ssdpressure.properties
+++ b/src/main/filters/filter-ssdpressure.properties
@@ -111,23 +111,23 @@ c3p0.main.maxPoolSize=800
 c3p0.main.minPoolSize=120
 
 #习题库连接池配置
-c3p0.question.initialPoolSize=20
-c3p0.question.maxPoolSize=120
-c3p0.question.minPoolSize=20
+c3p0.question.initialPoolSize=200
+c3p0.question.maxPoolSize=800
+c3p0.question.minPoolSize=120
 
 #报表库连接池配置
-c3p0.report.initialPoolSize=20
-c3p0.report.maxPoolSize=120
-c3p0.report.minPoolSize=20
+c3p0.report.initialPoolSize=200
+c3p0.report.maxPoolSize=800
+c3p0.report.minPoolSize=120
 
 #单元测试用户id（张磊userId）
 junit.userId=2107190930
 
 #elasticsearch configure
-elasticsearch.domain=172.24.133.113
+elasticsearch.domain=elk-cl.sdp
 elasticsearch.port=9300
-elasticsearch.cluster.name=sdptest
-elasticsearch.index.name=sdptest_lcms_ssdpressure_nd_education_resource
+elasticsearch.cluster.name=cl-log-01
+elasticsearch.index.name=sdptest_lcms_ssdpressure_nd_education_resource2
 
 #trace
 waf.trace.enabled=false
