LCMS使用特定UC账号esp-lifecycle

--- a/src/main/resources/waf.properties
+++ b/src/main/resources/waf.properties
@@ -4,11 +4,9 @@ waf.environment=${env}
 //waf.uc.uri=${waf.uc.uri}
 waf.uc.uri=${waf.uc.uri}
 //用于进行 bearer token 认证的账号名
-#waf.client.bearerToken.account.username=waf_loginer
-waf.client.bearerToken.account.username=flexagon
+waf.client.bearerToken.account.username=esp_lifecycle
 //用于进行 bearer token 认证的密码
-#waf.client.bearerToken.account.password=80fba977d063a6f7262a8a9c95f61140
-waf.client.bearerToken.account.password=066f779df8225384c31511c1db3ca9fd
+waf.client.bearerToken.account.password=d4876ded8c0df211825893ae8a3c6df9
 #（REQUIRED）标识当前用户的业务领域，当获取用户及角色信息时需要
 waf.uc.realm=lc.service.esp.nd
 #当前安全模块的鉴权行为（判断当前用户具备范围某些资源的权限）是否被禁用
