1.解决跨域请求时识别不到bsyskey的问题 2.获取用户信息方式改为getCurrentToken()

--- a/src/main/resources/waf.properties
+++ b/src/main/resources/waf.properties
@@ -23,3 +23,6 @@ waf.zipkin.collector.host=${waf.zipkin.collector.host}
 waf.exception.remote.httpstatus.proxy=false
 #异常信息message提示信息
 waf.exception.friendly.disabled=false
+
+#解决跨域时认不到bsyskey的问题
+waf.cors.allow.headers=Origin, Accept, X-Requested-With, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers, Authorization, Cache-control, Orgname, vorg, bsyskey
