revert to master1

--- a/src/main/resources/waf.properties
+++ b/src/main/resources/waf.properties
@@ -4,9 +4,9 @@ waf.environment=${env}
 //waf.uc.uri=${waf.uc.uri}
 waf.uc.uri=${waf.uc.uri}
 //用于进行 bearer token 认证的账号名
-waf.client.bearerToken.account.username=esp_lifecycle
+waf.client.bearerToken.account.username=waf_loginer
 //用于进行 bearer token 认证的密码
-waf.client.bearerToken.account.password=d4876ded8c0df211825893ae8a3c6df9
+waf.client.bearerToken.account.password=80fba977d063a6f7262a8a9c95f61140
 #（REQUIRED）标识当前用户的业务领域，当获取用户及角色信息时需要
 waf.uc.realm=lc.service.esp.nd
 #当前安全模块的鉴权行为（判断当前用户具备范围某些资源的权限）是否被禁用
@@ -23,6 +23,3 @@ waf.zipkin.collector.host=${waf.zipkin.collector.host}
 waf.exception.remote.httpstatus.proxy=false
 #异常信息message提示信息
 waf.exception.friendly.disabled=false
-
-#解决跨域时认不到bsyskey的问题
-waf.cors.allow.headers=Origin, Accept, X-Requested-With, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers, Authorization, Cache-control, Orgname, vorg, bsyskey
