--- a/src/main/resources/config/message/exception_message.properties
+++ b/src/main/resources/config/message/exception_message.properties
@@ -403,7 +403,16 @@ resourceStatisticalController.add.check.dataFrom.fail=data_from不能为空
 resourceStatisticalController.add.check.keyValue.fail=key_value不能为空或者不能小于0
 resourceStatisticalController.add.check.resource.fail=资源统计指标对应的源资源未找到
 
-
+#userRestypeMapping
+userRestypeMappingController.query.operation.fail=用户对应的请求类型未找到
+common.checkParam.empty=不能为空
+has.role.exists=用户已存在一个角色
+role.not.found=用户不存在该角色
+access.denied=没有权限
+lib.admin.denied=库管理员没有绑定/解除超级管理员和库管理员的权限
+create.user.role.Fail=创建用户权限失败
+#userCoverageMapping
+userCoverageMappingController.query.operation.fail=用户对应的覆盖类型未找到
 
 store.sdk.fail=调用存储sdk失败
 invoking.cs.fail=调用CS接口失败
