--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -1,6 +1,7 @@
 #uc api地址
 #esp_uc_api_domain=${esp_uc_api_domain}
 esp_uc_api_domain=${waf.uc.uri}
+esp_uc_api_realm=${waf.uc.realm}
 esp_uc_api_version=${esp_uc_api_version}
 #访问UC服务的用户名
 esp_uc_api_access_username=${esp_uc_api_access_username}
@@ -75,3 +76,18 @@ elasticsearch.index.name=${elasticsearch.index.name}
 
 #安全认证filter的类名
 #authenticationFilterName=${authentication_filter_name}
+
+
+#esp 权限角色
+#超级管理员
+esp_super_admin = ${esp.super.admin}
+#库管理员
+esp_coverage_admin = ${esp.coverage.admin}
+#资源创建者角色
+esp_res_creator = ${esp.res.creator}
+#维度管理者角色
+esp_category_data_admin = ${esp.category.data.admin}
+#资源消费者角色
+esp_res_consumer = ${esp.res.consumer}
+#游客角色
+esp_guest = ${esp.guest}
