--- a/src/main/filters/filter-development.properties
+++ b/src/main/filters/filter-development.properties
@@ -14,6 +14,7 @@ slides.uri=http://esp-slides.dev.web.nd/
 
 #waf uc相关配置 
 waf.uc.uri=https://ucbetapi.101.com/v0.93/
+waf.uc.realm=lc.service.esp.nd
 #门户对应的组织
 filter.uc.org=org_esp_dev
 #访问UC服务的用户名
@@ -137,3 +138,16 @@ waf.zipkin.collector.host=http://changle.zipkin.web.sdp:8080/
 #安全认证过滤器的类路径
 #authentication_filter_name=nd.esp.service.lifecycle.security.LcAuthenticationFilter
 
+#esp 权限角色
+#超级管理员
+esp.super.admin = 136817
+#库管理员
+esp.coverage.admin = 136821
+#资源创建者角色
+esp.res.creator = 126851
+#维度管理者角色
+esp.category.data.admin = 136822
+#资源消费者角色
+esp.res.consumer = 136823
+#游客角色
+esp.guest = 126852
