--- a/src/main/resources/config/message/exception_message.properties
+++ b/src/main/resources/config/message/exception_message.properties
@@ -411,6 +411,7 @@ role.not.found=用户不存在该角色
 access.denied=没有权限
 lib.admin.denied=库管理员没有绑定/解除超级管理员和库管理员的权限
 create.user.role.Fail=创建用户权限失败
+forbidden=权限不足
 #userCoverageMapping
 userCoverageMappingController.query.operation.fail=用户对应的覆盖类型未找到
 
