--- a/src/main/filters/filter-development.properties
+++ b/src/main/filters/filter-development.properties
@@ -14,7 +14,6 @@ slides.uri=http://esp-slides.dev.web.nd/
 
 #waf uc相关配置 
 waf.uc.uri=https://ucbetapi.101.com/v0.93/
-waf.uc.realm=lc.service.esp.nd
 #门户对应的组织
 filter.uc.org=org_esp_dev
 #访问UC服务的用户名
@@ -138,7 +137,9 @@ waf.zipkin.collector.host=http://changle.zipkin.web.sdp:8080/
 #安全认证过滤器的类路径
 #authentication_filter_name=nd.esp.service.lifecycle.security.LcAuthenticationFilter
 
-#esp 权限角色
+#说明 add by @author lanyl
+#====Start=====
+#esp 权限角色配置
 #超级管理员
 esp.super.admin = 136817
 #库管理员
@@ -151,3 +152,4 @@ esp.category.data.admin = 136822
 esp.res.consumer = 136823
 #游客角色
 esp.guest = 126852
+#====End=====
