--- a/src/main/filters/filter-product.properties
+++ b/src/main/filters/filter-product.properties
@@ -141,7 +141,9 @@ elasticsearch.cluster.name=wx-lcms-01
 elasticsearch.index.name=lcms_product_nd_education_resource
 
 
-#esp 权限角色
+#说明 add by @author lanyl
+#====Start=====
+#esp 权限角色配置
 #超级管理员
 esp.super.admin = 1422
 #库管理员
@@ -154,3 +156,4 @@ esp.category.data.admin = 1425
 esp.res.consumer = 1426
 #游客角色
 esp.guest = 1427
+#====End=====
