--- a/src/main/filters/filter-ssdpressure.properties
+++ b/src/main/filters/filter-ssdpressure.properties
@@ -132,3 +132,21 @@ elasticsearch.index.name=sdptest_lcms_ssdpressure_nd_education_resource2
 #trace
 waf.trace.enabled=false
 waf.zipkin.collector.host=http://changle.zipkin.web.sdp:8080/
+
+
+#说明 add by @author lanyl
+#====Start=====
+#esp 权限角色配置
+#超级管理员
+esp.super.admin = 136817
+#库管理员
+esp.coverage.admin = 136828
+#资源创建者角色
+esp.res.creator = 126851
+#维度管理者角色
+esp.category.data.admin = 136822
+#资源消费者角色
+esp.res.consumer = 136823
+#游客角色
+esp.guest = 126852
+#====End=====
