--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -77,7 +77,9 @@ elasticsearch.index.name=${elasticsearch.index.name}
 #authenticationFilterName=${authentication_filter_name}
 
 
-#esp 权限角色
+#说明 add by @author lanyl
+#====Start=====
+#esp 权限角色配置
 #超级管理员
 esp_super_admin = ${esp.super.admin}
 #库管理员
@@ -90,3 +92,4 @@ esp_category_data_admin = ${esp.category.data.admin}
 esp_res_consumer = ${esp.res.consumer}
 #游客角色
 esp_guest = ${esp.guest}
+#====End=====
