--- a/src/main/resources/config/message/exception_message.properties
+++ b/src/main/resources/config/message/exception_message.properties
@@ -403,6 +403,14 @@ resourceStatisticalController.add.check.dataFrom.fail=data_from不能为空
 resourceStatisticalController.add.check.keyValue.fail=key_value不能为空或者不能小于0
 resourceStatisticalController.add.check.resource.fail=资源统计指标对应的源资源未找到
 
+
+store.sdk.fail=调用存储sdk失败
+invoking.cs.fail=调用CS接口失败
+invoking.uc.fail=调用UC接口失败
+
+#说明 add by @author lanyl
+#角色权限控制相关错误配置
+#====Start=====
 #userRestypeMapping
 userRestypeMappingController.query.operation.fail=用户对应的请求类型未找到
 common.checkParam.empty=不能为空
@@ -414,7 +422,4 @@ create.user.role.Fail=创建用户权限失败
 forbidden=权限不足
 #userCoverageMapping
 userCoverageMappingController.query.operation.fail=用户对应的覆盖类型未找到
-
-store.sdk.fail=调用存储sdk失败
-invoking.cs.fail=调用CS接口失败
-invoking.uc.fail=调用UC接口失败
+#====End=====
