--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -93,5 +93,5 @@ esp_res_consumer = ${esp.res.consumer}
 #\u6e38\u5ba2\u89d2\u8272
 esp_guest = ${esp.guest}
 #\u6743\u9650\u542f\u7528\u5f00\u5173
-esp_authority_enable=true
-#====End=====
+esp_authority_enable = ${esp_authority_enable}
+#====End===== 
