错误提示代码更改。。。

--- a/src/main/resources/config/message/exception_message.properties
+++ b/src/main/resources/config/message/exception_message.properties
@@ -412,7 +412,6 @@ invoking.uc.fail=调用UC接口失败
 #角色权限控制相关错误配置
 #====Start=====
 common.checkParam.empty=不能为空
-access.denied=没有权限
-lib.admin.denied=库管理员没有绑定/解除超级管理员和库管理员的权限
+coverage.admin.denied=库管理员没有绑定/解除超级管理员和库管理员的权限
 forbidden=权限不足
 #====End=====
