--- a/src/main/filters/filter-preproduction.properties
+++ b/src/main/filters/filter-preproduction.properties
@@ -1,76 +1,76 @@
-#\u5b58\u50a8api\u5730\u5740
+#存储api地址
 esp_store_url=http://esp-store.beta.web.sdp.101.com
 version=v0.2
 
-#\u667a\u80fd\u51fa\u9898 \u8bbf\u95ee\u5730\u5740
+#智能出题 访问地址
 intelli.uri=http://intelli-knowledge.beta.web.sdp.101.com/
-#\u667a\u80fd\u51fa\u9898 \u901a\u77e5\u5730\u5740
+#智能出题 通知地址
 smartq.uri=http://smartq-interrestools.beta.web.sdp.101.com/
-#LC \u8bbf\u95ee\u5730\u5740
+#LC 访问地址
 lcms.uri=http://esp-lifecycle.beta.web.sdp.101.com
 
-#\u8bfe\u4ef6\u7f16\u8f91\u5668 \u8bbf\u95ee\u5730\u5740
+#课件编辑器 访问地址
 slides.uri=http://esp-slides.beta.web.sdp.101.com/
 
-#waf uc\u76f8\u5173\u914d\u7f6e
+#waf uc相关配置
 waf.uc.uri=https://ucbetapi.101.com/v0.93/
-#\u95e8\u6237\u5bf9\u5e94\u7684\u7ec4\u7ec7
+#门户对应的组织
 filter.uc.org=org_esp_beta
-#\u8bbf\u95eeUC\u670d\u52a1\u7684\u7528\u6237\u540d
+#访问UC服务的用户名
 waf.client.bearerToken.account.username=waf_loginer
-#\u8bbf\u95eeUC\u670d\u52a1\u7684\u5bc6\u7801
+#访问UC服务的密码
 waf.client.bearerToken.account.password=80fba977d063a6f7262a8a9c95f61140
 
-#\u8bbf\u95eeCS\u7684\u5730\u5740
+#访问CS的地址
 sdp_cs_api=http://betacs.101.com/v0.1
-#\u8bbf\u95eeCS\u7684service_id
+#访问CS的service_id
 sdp_cs_service_id=5b3661a3-6be2-4bac-a611-20016e3edfef
 
 
 sdp_cs_file_path=/preproduction_content_edu/esp
 sdp_cs_file_path_temp=/esp
 icplayer_download_url=/preproduction_content_edu/icplayer/latest/icplayer.zip
-# cs session \u9ed8\u8ba4path
+# cs session 默认path
 sdp_cs_file_session_path=/preproduction_content_edu
 
-# \u9ed8\u8ba4cs\u6253\u5305\u5b9e\u4f8b
+# 默认cs打包实例
 sdp_cs_default_instance=${ref-path}/preproduction_content_edu
 
-# \u6253\u5305\u53ef\u80fd\u7528\u5230\u7684\u53e6\u5916\u4e00\u4e2a\u5b9e\u4f8b
+# 打包可能用到的另外一个实例
 sdp_cs_default_instance_other=${ref-path}/preproduction_content_edu_prod
 
-# \u6253\u5305\u53ef\u80fd\u7528\u5230\u7684\u53e6\u5916\u4e00\u4e2a\u5b9e\u4f8b,\u4e5f\u88ab\u516c\u79c1\u6709\u5e93\u4f7f\u7528\u3002
+# 打包可能用到的另外一个实例,也被公私有库使用。
 sdp_cs_module_instance=${ref-path-addon}/preproduction_content_module_mng
 
-# \u4ee5\u4e0b\u56db\u7ec4\u914d\u7f6e\u4e00\u4e00\u5bf9\u5e94
-# cs\u6253\u5305\u5b9e\u4f8b\u914d\u7f6ekey
+# 以下四组配置一一对应
+# cs打包实例配置key
 sdp_cs_ref_key=${ref-path}/preproduction_content_edu,${ref-path}/preproduction_content_edu_prod,${ref-path-addon}/preproduction_content_module_mng,${icplayer}
-# cs\u6253\u5305\u5b9e\u4f8b\u5bf9\u5e94URL\u5730\u5740
+# cs打包实例对应URL地址
 sdp_cs_ref_url=http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1
-# cs\u6253\u5305\u5b9e\u4f8b\u5bf9\u5e94\u5b58\u50a8path
+# cs打包实例对应存储path
 sdp_cs_ref_file_path=/preproduction_content_edu/esp,/preproduction_content_edu_prod/esp,/preproduction_content_module_mng/preproduction,/preproduction_content_edu/icplayer/latest
-# cs\u6253\u5305\u5b9e\u4f8b\u5bf9\u5e94service id
+# cs打包实例对应service id
 sdp_cs_ref_service_id=5b3661a3-6be2-4bac-a611-20016e3edfef,9da0b4b3-676f-49fa-a745-3ee08fe424b0,40afb964-78c0-4be9-b929-3f6f909c3ecf,5b3661a3-6be2-4bac-a611-20016e3edfef
 
-# \u8c03\u5ea6\u670d\u52a1\u4efb\u52a1\u521b\u5efaurl
+# 调度服务任务创建url
 task_submit_utl=http://esp-async-task.beta.web.sdp.101.com/concurrent/service/proxy/submit-execution
 
-# \u6253\u5305\u63a5\u53e3\uff1a   asynpack\u5f02\u6b65   pack\u540c\u6b65
+# 打包接口：   asynpack异步   pack同步
 sdp_cs_pack_api=/dentries/actions/asynpack
 
-#store sdk\u914d\u7f6e
+#store sdk配置
 jdbc.driver=com.mysql.fabric.jdbc.FabricMySQLDriver
 jdbc.url=jdbc:mysql:fabric://fabric.rds.sdp.nd:32272/preproduction_mysql_esp?autoReconnect=true&fabricServerGroup=pre_edu_group&fabricUsername=admin&fabricPassword=ZB5dGGTJtsC8t7OQ&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 jdbc.username=user_5at248ilcu
 jdbc.password=DTJyBmNvWZ
 
-#\u4e60\u9898\u5e93\u914d\u7f6e
+#习题库配置
 jdbc.question.driver=com.mysql.fabric.jdbc.FabricMySQLDriver
 jdbc.question.url=jdbc:mysql:fabric://fabric.rds.sdp.nd:32272/preproduction_mysql_esp_question?autoReconnect=true&fabricServerGroup=pre_edu_group&fabricUsername=admin&fabricPassword=ZB5dGGTJtsC8t7OQ&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 jdbc.question.username=user_uv9kfbr1gx
 jdbc.question.password=LNPOME1b2a
 
-#\u62a5\u8868\u5e93\u914d\u7f6e
+#报表库配置
 jdbc.report.driver=com.mysql.fabric.jdbc.FabricMySQLDriver
 jdbc.report.url=jdbc:mysql:fabric://fabric.rds.sdp.nd:32272/preproduction_mysql_esp_report?autoReconnect=true&fabricServerGroup=pre_all_group&fabricUsername=admin&fabricPassword=ZB5dGGTJtsC8t7OQ&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 jdbc.report.username=user_tv5q9coxpw
@@ -82,44 +82,44 @@ solr.collection=esp_release
 log4jFilePath=logs
 hibernate.format_sql=false
 
-#\u8bfe\u4ef6\u8f6c\u7801\u4f18\u5148\u7ea7 referer|priority(0 1 2)
+#课件转码优先级 referer|priority(0 1 2)
 transcode_info=esp-lms-prepare.beta.web.sdp.101.com|3,esp-slides.beta.web.sdp.101.com|3,esp-class.beta.web.sdp.101.com|3
 lc_domain_url=http://esp-lifecycle.beta.web.sdp.101.com
 
-#\u8bfe\u4ef6\u8f6c\u7801\u6a21\u677f\u5730\u5740
+#课件转码模板地址
 ppt_template_path=preproduction_content_edu/esp/ppt2ndcw_template
-#\u6559\u6848\u8f6c\u7801\u6a21\u677f\u5730\u5740
+#教案转码模板地址
 doc_template_path=preproduction_content_edu/esp/doc_template
 
-#\u521b\u5efaworker\u4efb\u52a1\u7684\u9ed8\u8ba4\u5206\u7ec4
+#创建worker任务的默认分组
 worker_default_group_id=2
 
-#\u6253\u5305\u4f18\u5148\u7ea7
+#打包优先级
 packaging_priority=5
 
 
 
-#redis\u5730\u5740/\u7aef\u53e3
+#redis地址/端口
 redis_url=esp-lifecycle.edu.pre-prod.redis.sdp
 redis_port=9389
 redis_index=0
 
-#\u8fde\u63a5\u6c60\u914d\u7f6e
+#连接池配置
 c3p0.main.initialPoolSize=20
 c3p0.main.maxPoolSize=120
 c3p0.main.minPoolSize=20
 
-#\u4e60\u9898\u5e93\u8fde\u63a5\u6c60\u914d\u7f6e
+#习题库连接池配置
 c3p0.question.initialPoolSize=20
 c3p0.question.maxPoolSize=120
 c3p0.question.minPoolSize=20
 
-#\u62a5\u8868\u5e93\u8fde\u63a5\u6c60\u914d\u7f6e
+#报表库连接池配置
 c3p0.report.initialPoolSize=20
 c3p0.report.maxPoolSize=120
 c3p0.report.minPoolSize=20
 
-#\u5355\u5143\u6d4b\u8bd5\u7528\u6237id\uff08\u5f20\u78causerId\uff09
+#单元测试用户id（张磊userId）
 junit.userId=2107144081
 
 
@@ -134,21 +134,21 @@ elasticsearch.cluster.name=wx-lcms-01
 elasticsearch.index.name=lcms_preproduct_nd_education_resource
 
 
-#\u8bf4\u660e add by @author lanyl
+#说明 add by @author lanyl
 #====Start=====
-#esp \u6743\u9650\u89d2\u8272\u914d\u7f6e
-#\u8d85\u7ea7\u7ba1\u7406\u5458
+#esp 权限角色配置
+#超级管理员
 esp.super.admin = 136817
-#\u5e93\u7ba1\u7406\u5458
+#库管理员
 esp.coverage.admin = 136828
-#\u8d44\u6e90\u521b\u5efa\u8005\u89d2\u8272
+#资源创建者角色
 esp.res.creator = 126851
-#\u7ef4\u5ea6\u7ba1\u7406\u8005\u89d2\u8272
+#维度管理者角色
 esp.category.data.admin = 136822
-#\u8d44\u6e90\u6d88\u8d39\u8005\u89d2\u8272
+#资源消费者角色
 esp.res.consumer = 136823
-#\u6e38\u5ba2\u89d2\u8272
+#游客角色
 esp.guest = 126852
-#\u6743\u9650\u542f\u7528\u5f00\u5173
+#权限启用开关
 esp_authority_enable=false
 #====End===== 
