--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -1,70 +1,70 @@
-#uc api\u5730\u5740
+#uc api地址
 #esp_uc_api_domain=${esp_uc_api_domain}
 esp_uc_api_domain=${waf.uc.uri}
 esp_uc_api_version=${esp_uc_api_version}
-#\u8bbf\u95eeUC\u670d\u52a1\u7684\u7528\u6237\u540d
+#访问UC服务的用户名
 esp_uc_api_access_username=${esp_uc_api_access_username}
-#\u8bbf\u95eeUC\u670d\u52a1\u7684\u5bc6\u7801
+#访问UC服务的密码
 esp_uc_api_access_password=${esp_uc_api_access_password}
 
-#\u8bfe\u4ef6\u7f16\u8f91\u5668 \u8bbf\u95ee\u5730\u5740
+#课件编辑器 访问地址
 slides.uri=${slides.uri}
 
-#\u667a\u80fd\u51fa\u9898 \u8bbf\u95ee\u5730\u5740
+#智能出题 访问地址
 intelli.uri=${intelli.uri}
-#\u667a\u80fd\u51fa\u9898 \u901a\u77e5\u5730\u5740
+#智能出题 通知地址
 smartq.uri=${smartq.uri}
-#lc \u8bbf\u95ee\u5730\u5740
+#lc 访问地址
 lcms.uri=${lcms.uri}
 
-#\u8bbf\u95eeCS\u7684\u5730\u5740
+#访问CS的地址
 sdp_cs_api=${sdp_cs_api}
-#\u95e8\u6237\u5bf9\u5e94\u7684\u7ec4\u7ec7
+#门户对应的组织
 filter_uc_api=${filter.uc.org}
-#\u8bbf\u95eeCS\u7684service_id
+#访问CS的service_id
 sdp_cs_service_id=${sdp_cs_service_id}
-#icplayer\u4e0b\u8f7d\u5730\u5740(\u7248\u672c\u5730\u5740)
+#icplayer下载地址(版本地址)
 #icplayer_download_url=/edu/lifecycle/dev/icplayer/v0.7/icplayer.zip
 icplayer_download_url=${icplayer_download_url}
 
-#*******cs session\u76f8\u5173\u914d\u7f6e**********
-# cs\u5b58\u50a8\u76ee\u5f55
+#*******cs session相关配置**********
+# cs存储目录
 sdp_cs_file_path=${sdp_cs_file_path}
 sdp_cs_file_path_addon=${sdp_cs_file_path_addon}
 
-# cs session\u5931\u6548\u65f6\u95f4 \u4e00\u5468
+# cs session失效时间 一周
 sdp_cs_file_session_expiretime=1296000
-# cs session\u89d2\u8272\u540d
+# cs session角色名
 sdp_cs_file_session_role=admin
-# cs session \u9ed8\u8ba4\u7528\u6237\u540d
+# cs session 默认用户名
 sdp_cs_file_session_username=777
-# cs session \u9ed8\u8ba4path
+# cs session 默认path
 sdp_cs_file_session_path=${sdp_cs_file_session_path}
 
 sdp_cs_default_instance=${sdp_cs_default_instance}
 
-# \u6253\u5305\u53ef\u80fd\u7528\u5230\u7684\u53e6\u5916\u4e00\u4e2a\u5b9e\u4f8b
+# 打包可能用到的另外一个实例
 sdp_cs_default_instance_other=${sdp_cs_default_instance_other}
 
-# module\u5b9e\u4f8b
+# module实例
 sdp_cs_module_instance=${sdp_cs_module_instance}
 
-# \u6b64\u56db\u7ec4\u914d\u7f6e\u4e00\u4e00\u5bf9\u5e94
-# \u5404\u5b9e\u4f8b\u7684\u6807\u7b7e,\u591a\u4e2a,\u7528","\u9694\u5f00
+# 此四组配置一一对应
+# 各实例的标签,多个,用","隔开
 sdp_cs_ref_key=${sdp_cs_ref_key}
-# \u5404\u5b9e\u4f8b\u5bf9\u5e94cs\u7684API\u5730\u5740,\u591a\u4e2a,\u7528","\u9694\u5f00
+# 各实例对应cs的API地址,多个,用","隔开
 sdp_cs_ref_url=${sdp_cs_ref_url}
-# \u5404\u5b9e\u4f8b\u5bf9\u5e94cs\u7684\u76f8\u5bf9path,\u591a\u4e2a,\u7528","\u9694\u5f00
+# 各实例对应cs的相对path,多个,用","隔开
 sdp_cs_ref_file_path=${sdp_cs_ref_file_path}
-# \u5404\u5b9e\u4f8b\u5728cs\u7684service_id,\u591a\u4e2a,\u7528","\u9694\u5f00
+# 各实例在cs的service_id,多个,用","隔开
 sdp_cs_ref_service_id=${sdp_cs_ref_service_id}
 
-#redis\u914d\u7f6e
+#redis配置
 redis_url=${redis_url}
 redis_port=${redis_port}
 redis_index=${redis_index}
 
-#\u5355\u5143\u6d4b\u8bd5\u7528\u6237id\uff08\u5f20\u78ca\u540c\u5b66\uff09
+#单元测试用户id（张磊同学）
 junit.userId=${junit.userId}
 
 #elasticsearch configure
@@ -73,25 +73,25 @@ elasticsearch.port=${elasticsearch.port}
 elasticsearch.cluster.name=${elasticsearch.cluster.name}
 elasticsearch.index.name=${elasticsearch.index.name}
 
-#\u5b89\u5168\u8ba4\u8bc1filter\u7684\u7c7b\u540d
+#安全认证filter的类名
 #authenticationFilterName=${authentication_filter_name}
 
 
-#\u8bf4\u660e add by @author lanyl
+#说明 add by @author lanyl
 #====Start=====
-#esp \u6743\u9650\u89d2\u8272\u914d\u7f6e
-#\u8d85\u7ea7\u7ba1\u7406\u5458
+#esp 权限角色配置
+#超级管理员
 esp_super_admin = ${esp.super.admin}
-#\u5e93\u7ba1\u7406\u5458
+#库管理员
 esp_coverage_admin = ${esp.coverage.admin}
-#\u8d44\u6e90\u521b\u5efa\u8005\u89d2\u8272
+#资源创建者角色
 esp_res_creator = ${esp.res.creator}
-#\u7ef4\u5ea6\u7ba1\u7406\u8005\u89d2\u8272
+#维度管理者角色
 esp_category_data_admin = ${esp.category.data.admin}
-#\u8d44\u6e90\u6d88\u8d39\u8005\u89d2\u8272
+#资源消费者角色
 esp_res_consumer = ${esp.res.consumer}
-#\u6e38\u5ba2\u89d2\u8272
+#游客角色
 esp_guest = ${esp.guest}
-#\u6743\u9650\u542f\u7528\u5f00\u5173
+#权限启用开关
 esp_authority_enable = ${esp_authority_enable}
 #====End===== 
