--- a/src/main/filters/filter-development.properties
+++ b/src/main/filters/filter-development.properties
@@ -131,7 +131,7 @@ elasticsearch.cluster.name=cl-log-01
 elasticsearch.index.name=lcms_dev_nd_education_resource
 
 #titan configure
-titan.domain=localhost
+titan.domain=192.168.11.139
 
 #trace
 waf.trace.enabled=false
