--- a/src/main/filters/filter-pressure.properties
+++ b/src/main/filters/filter-pressure.properties
@@ -117,5 +117,5 @@ elasticsearch.index.name=local
 titan.domain=61.160.40.136
 
 #trace
-waf.trace.enabled=true
+waf.trace.enabled=false
 waf.zipkin.collector.host=http://wuxi.zipkin.web.sdp:8080/
