增加报表jdbc driver 配置（使用预生产环境）

--- a/src/main/filters/filter-pressure.properties
+++ b/src/main/filters/filter-pressure.properties
@@ -65,6 +65,11 @@ jdbc.question.url=jdbc:mysql:fabric://fabric.rds.sdp.nd:32273/pressure_mysql_esp
 jdbc.question.username=user_av4n98rdtc
 jdbc.question.password=omiN9THLjR
 
+jdbc.report.driver=com.mysql.fabric.jdbc.FabricMySQLDriver
+jdbc.report.url=jdbc:mysql:fabric://fabric.rds.sdp.nd:32271/esp_report?fabricServerGroup=all_group&fabricUsername=admin&fabricPassword=ZB5dGGTJtsC8t7OQ&autoReconnect=true&useUnicode=true&characterEncoding=UTF8
+jdbc.report.username=user_bwv7tixj3m
+jdbc.report.password=j8zSh2u3yK
+
 solr.zkHost=10.33.8.210:2181,10.33.8.211:2181,10.33.8.212:2181
 solr.server.urls=http://10.33.8.210/solr,http://10.33.8.211/solr,http://10.33.8.212/solr
 solr.collection=esp_product
