添加配置（report连接池，外部依赖域名）

--- a/src/main/filters/filter-pressure.properties
+++ b/src/main/filters/filter-pressure.properties
@@ -2,6 +2,13 @@
 esp_store_url=http://esp-store.beta.web.sdp.101.com
 version=v0.2
 
+#智能出题 访问地址
+intelli.uri=http://intelli-knowledge.beta.web.sdp.101.com/
+#智能出题 通知地址
+smartq.uri=http://smartq-interrestools.beta.web.sdp.101.com/
+#LC 访问地址
+lcms.uri=http://esp-lifecycle.beta.web.sdp.101.com
+
 #waf uc相关配置 
 waf.uc.uri=https://ucbetapi.101.com/v0.93/
 #门户对应的组织
@@ -105,9 +112,13 @@ c3p0.main.maxPoolSize=800
 c3p0.main.minPoolSize=120
 
 #习题库连接池配置
-c3p0.question.initialPoolSize=20
-c3p0.question.maxPoolSize=120
-c3p0.question.minPoolSize=20
+c3p0.question.initialPoolSize=200
+c3p0.question.maxPoolSize=800
+c3p0.question.minPoolSize=120
+
+c3p0.report.initialPoolSize=20
+c3p0.report.maxPoolSize=120
+c3p0.report.minPoolSize=20
 
 #单元测试用户id（张磊userId）
 junit.userId=2000178486
