新增一个环境：titanlocalpressure（除titan外的配置与集成环境相同）

--- a/pom.xml
+++ b/pom.xml
@@ -407,6 +407,13 @@
             <!-- <activation><activeByDefault>true</activeByDefault></activation> -->
         </profile>
         <profile>
+            <id>titanlocalpresurre</id>
+            <properties>
+                <env>titanlocalpresurre</env>
+            </properties>
+            <!-- <activation><activeByDefault>true</activeByDefault></activation> -->
+        </profile>
+        <profile>
             <id>ssdpressure</id>
             <properties>
                 <env>ssdpressure</env>
