filter-preproduction.properties新增配置： #titan configure titan.domain=10.33.6.160 filter-production.properties新增配置： #titan configure titan.domain=10.33.6.161

--- a/src/main/filters/filter-product.properties
+++ b/src/main/filters/filter-product.properties
@@ -130,6 +130,8 @@ c3p0.report.minPoolSize=20
 #单元测试用户id（张磊userId）
 junit.userId=2000178486
 
+titan.domain=10.33.6.161
+
 #trace
 waf.trace.enabled=true
 waf.zipkin.collector.host=http://wuxi.zipkin.web.sdp:8080/
