--- a/src/main/filters/filter-preproduction.properties
+++ b/src/main/filters/filter-preproduction.properties
@@ -122,6 +122,8 @@ c3p0.report.minPoolSize=20
 #单元测试用户id（张磊userId）
 junit.userId=2107144081
 
+#titan configure
+titan.domain=10.33.6.160
 
 #trace
 waf.trace.enabled=true
