--- a/src/main/resources/config/worker/worker.properties
+++ b/src/main/resources/config/worker/worker.properties
@@ -22,6 +22,9 @@ worker_transcode_service=2
 #视频转码worker service
 worker_video_transcode_service=5
 
+#图片转码worker service
+worker_image_transcode_service=6
+
 #教案转码worker service
 worker_lessonplan_transcode_service=3
 
