子教学目标创建/更新接口实现

--- a/src/main/resources/config/props/restype_corresponding_tablename.properties
+++ b/src/main/resources/config/props/restype_corresponding_tablename.properties
@@ -7,6 +7,7 @@ coursewareobjecttemplates=courseware_object_templates
 ebooks=ebooks
 homeworks=homeworks
 instructionalobjectives=instructional_objectives
+subInstruction=sub_instruction
 knowledges=chapters
 learningplans=learning_plans
 lessonplans=lessonplans
