根据请求头实现数据加密功能

--- a/src/main/resources/config/message/exception_message.properties
+++ b/src/main/resources/config/message/exception_message.properties
@@ -415,3 +415,9 @@ common.checkParam.empty=不能为空
 coverage.admin.denied=库管理员没有绑定/解除超级管理员和库管理员的权限
 forbidden=权限不足
 #====End=====
+
+#说明 add by @author lanyl
+#数据加密相关错误配置
+#====Start=====
+encrypt.data.fail = 数据加密失败
+#====End=====
