vr全景图图片转码； 任务表不加锁；

--- a/src/main/filters/filter-preproduction.properties
+++ b/src/main/filters/filter-preproduction.properties
@@ -44,13 +44,13 @@ sdp_cs_module_instance=${ref-path-addon}/preproduction_content_module_mng
 
 # 以下四组配置一一对应
 # cs打包实例配置key
-sdp_cs_ref_key=${ref-path}/preproduction_content_edu,${ref-path}/preproduction_content_edu_prod,${ref-path-addon}/preproduction_content_module_mng,${icplayer}
+sdp_cs_ref_key=${ref-path}/preproduction_content_edu,${ref-path}/preproduction_content_edu_prod,${ref-path-addon}/preproduction_content_module_mng,${icplayer},${ref-path}/preproduction_content_homework
 # cs打包实例对应URL地址
-sdp_cs_ref_url=http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1
+sdp_cs_ref_url=http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1
 # cs打包实例对应存储path
-sdp_cs_ref_file_path=/preproduction_content_edu/esp,/preproduction_content_edu_prod/esp,/preproduction_content_module_mng/preproduction,/preproduction_content_edu/icplayer/latest
+sdp_cs_ref_file_path=/preproduction_content_edu/esp,/preproduction_content_edu_prod/esp,/preproduction_content_module_mng/preproduction,/preproduction_content_edu/icplayer/latest,/preproduction_content_homework
 # cs打包实例对应service id
-sdp_cs_ref_service_id=5b3661a3-6be2-4bac-a611-20016e3edfef,9da0b4b3-676f-49fa-a745-3ee08fe424b0,40afb964-78c0-4be9-b929-3f6f909c3ecf,5b3661a3-6be2-4bac-a611-20016e3edfef
+sdp_cs_ref_service_id=5b3661a3-6be2-4bac-a611-20016e3edfef,9da0b4b3-676f-49fa-a745-3ee08fe424b0,40afb964-78c0-4be9-b929-3f6f909c3ecf,5b3661a3-6be2-4bac-a611-20016e3edfef,c81781d4-b2ff-429f-a9f3-e206de7adb7f
 
 # 调度服务任务创建url
 task_submit_utl=http://esp-async-task.beta.web.sdp.101.com/concurrent/service/proxy/submit-execution
