--- a/src/main/filters/filter-integration.properties
+++ b/src/main/filters/filter-integration.properties
@@ -47,13 +47,13 @@ sdp_cs_module_instance=${ref-path-addon}/preproduction_content_module_mng
 
 # 以下四组配置一一对应
 # cs打包实例配置key
-sdp_cs_ref_key=${ref-path}/prepub_content_edu,${ref-path}/prepub_content_edu_product,${ref-path-addon}/preproduction_content_module_mng,${icplayer}
+sdp_cs_ref_key=${ref-path}/prepub_content_edu,${ref-path}/prepub_content_edu_product,${ref-path-addon}/preproduction_content_module_mng,${icplayer},${ref-path}/dev_content_homework,${ref-path}/qa_content_homework,${ref-path}/prepub_content_homework
 # cs打包实例对应URL地址
-sdp_cs_ref_url=http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1
+sdp_cs_ref_url=http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://betacs.101.com/v0.1
 # cs打包实例对应存储path
-sdp_cs_ref_file_path=/prepub_content_edu/esp,/prepub_content_edu_product/esp,/preproduction_content_module_mng/test,/prepub_content_edu/icplayer/latest
+sdp_cs_ref_file_path=/prepub_content_edu/esp,/prepub_content_edu_product/esp,/preproduction_content_module_mng/test,/prepub_content_edu/icplayer/latest,/dev_content_homework,/qa_content_homework,/prepub_content_homework
 # cs打包实例对应service id
-sdp_cs_ref_service_id=a4b26064-595f-47a5-9f81-6afcb2d296c2,e49f1c47-01aa-4326-9525-ce25064ace63,40afb964-78c0-4be9-b929-3f6f909c3ecf,a4b26064-595f-47a5-9f81-6afcb2d296c2
+sdp_cs_ref_service_id=a4b26064-595f-47a5-9f81-6afcb2d296c2,e49f1c47-01aa-4326-9525-ce25064ace63,40afb964-78c0-4be9-b929-3f6f909c3ecf,a4b26064-595f-47a5-9f81-6afcb2d296c2,71df41d8-496e-426e-a632-06f00c1188e3,a93358fe-8c73-4cce-85fc-55a93a8472ca,abcd9d18-0716-45e1-9933-95f77e7fdcbc
 
 
 # 调度服务任务创建url
