--- a/src/main/filters/filter-product.properties
+++ b/src/main/filters/filter-product.properties
@@ -46,13 +46,13 @@ sdp_cs_module_instance=${ref-path-addon}/module_mng
 
 # 以下四组配置一一对应
 # cs打包实例配置key
-sdp_cs_ref_key=${ref-path}/edu,${ref-path}/edu_product,${ref-path-addon}/module_mng,${icplayer}
+sdp_cs_ref_key=${ref-path}/edu,${ref-path}/edu_product,${ref-path-addon}/module_mng,${icplayer},${ref-path}/homework
 # cs打包实例对应URL地址
-sdp_cs_ref_url=http://cs.101.com/v0.1,http://cs.101.com/v0.1,http://cs.101.com/v0.1,http://cs.101.com/v0.1
+sdp_cs_ref_url=http://cs.101.com/v0.1,http://cs.101.com/v0.1,http://cs.101.com/v0.1,http://cs.101.com/v0.1,http://cs.101.com/v0.1
 # cs打包实例对应存储path
-sdp_cs_ref_file_path=/edu/esp,/edu_product/esp,/module_mng/release,/edu/icplayer/latest
+sdp_cs_ref_file_path=/edu/esp,/edu_product/esp,/module_mng/release,/edu/icplayer/latest,/homework
 # cs打包实例对应service id
-sdp_cs_ref_service_id=cc0d47a0-54d9-442e-bf47-9fb0ca4e6bf8,841f3352-57e3-439e-846a-dafdee6babae,95a721c7-bffe-4f3c-beb0-c3c11876670f,cc0d47a0-54d9-442e-bf47-9fb0ca4e6bf8
+sdp_cs_ref_service_id=cc0d47a0-54d9-442e-bf47-9fb0ca4e6bf8,841f3352-57e3-439e-846a-dafdee6babae,95a721c7-bffe-4f3c-beb0-c3c11876670f,cc0d47a0-54d9-442e-bf47-9fb0ca4e6bf8,61b82698-111a-4bf1-b3cb-89d8b37773b2
 
 
 # 调度服务任务创建url
