对接消息队列 新增 消费者和生产者执行器

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -95,3 +95,7 @@ esp_res_consumer = ${esp.res.consumer}
 #权限启用开关
 esp_authority_enable = ${esp_authority_enable}
 #====End===== 
+
+#消息队列RabbitMq
+mq.env=${mq.env}
+mq.exchange=${mq.exchange}
