增加版本时间、提供方式等字段

--- a/src/main/resources/config/message/exception_message.properties
+++ b/src/main/resources/config/message/exception_message.properties
@@ -11,6 +11,7 @@ paramCheckUtil.checkIdentifier.reg.fail=UUID格式不对
 paramCheckUtil.checkKeywordsLength.fail=keywords不能超过1000个字符
 paramCheckUtil.checkTagsLength.fail=tags不能超过1000个字符
 regValidator.check.loadProp.fail=正则校验加载属性出错
+commonHelper.inputParamValid.checkRightDate.fail=版本结束时间必须大于开始时间
 
 ##ASSET##
 assetController.getDownloadUrl.operation.fail=获得素材的下载地址出错
