--- a/src/main/resources/config/props/db_titan_field_ndresource.properties
+++ b/src/main/resources/config/props/db_titan_field_ndresource.properties
@@ -31,4 +31,5 @@ learningTime=edu_learning_time
 dbEduDescription=edu_description
 eduLanguage=edu_language
 publisher=lc_publisher
+ndresCode=lc_ndres_code
 #primaryCategory=T.label
