--- a/src/main/resources/config/props/db_titan_field_relation.properties
+++ b/src/main/resources/config/props/db_titan_field_relation.properties
@@ -1,6 +1,12 @@
 #relation
-dbtags=tags
 enable=enable
+identifier=identifier
 orderNum=order_num
-label=rr_label
 relationType=relation_type
+sortNum=sort_num
+resType=res_type
+sourceUuid=source_uuid
+dbtags=tags
+resourceTargetType=resource_target_type
+target=target_uuid
+#label=rr_label
