tech_info\coverage\category边上添加冗余字段

--- a/src/main/resources/config/props/db_titan_field_category.properties
+++ b/src/main/resources/config/props/db_titan_field_category.properties
@@ -3,5 +3,5 @@ taxonname=cg_taxonname
 shortName=cg_short_name
 categoryCode=cg_category_code
 categoryName=cg_category_name
-taxonpath=cg_taxonpath
-identifier=identifier
+#taxonpath=cg_taxonpath
+#identifier=identifier
