资源提供商，资源版权方

--- a/src/main/resources/config/message/exception_message.properties
+++ b/src/main/resources/config/message/exception_message.properties
@@ -423,3 +423,16 @@ forbidden=权限不足
 #====Start=====
 encrypt.data.fail = 数据加密失败
 #====End=====
+
+#提供商
+resourceProviderServiceImpl.createResourceProvider.operation.fail=创建资源提供商失败
+resourceProviderServiceImpl.updateResourceProvider.operation.fail=修改资源提供商失败
+resourceProviderServiceImpl.deleteResourceProvider.operation.success=删除资源提供商成功
+resourceProviderServiceImpl.createResourceProvider.check.titleDuplicate.fail=资源提供商title不允许重复
+resourceProviderServiceImpl.updateResourceProvider.check.providerNotExist.fail=资源提供商未找到
+#版权方
+copyrightOwnerServiceImpl.createCopyrightOwner.operation.fail=创建资源版权方失败
+copyrightOwnerServiceImpl.updateCopyrightOwner.operation.fail=修改资源版权方失败
+copyrightOwnerServiceImpl.deleteCopyrightOwner.operation.success=删除资源版权方成功
+copyrightOwnerServiceImpl.createCopyrightOwner.check.titleDuplicate.fail=资源版权方title不允许重复
+copyrightOwnerServiceImpl.updateCopyrightOwner.check.copyrightOwnerNotExist.fail=资源版权方未找到
