修改统计字段名

--- a/src/main/resources/config/props/db_titan_field_statistical.properties
+++ b/src/main/resources/config/props/db_titan_field_statistical.properties
@@ -1,8 +1,8 @@
-title=st_title
-resource=st_resource
-keyTitle=st_key_title
-keyValue=st_key_value
-updateTime=st_update_time
-dataFrom=st_data_from
-resType=st_res_type
+title=sta_title
+resource=sta_resource
+keyTitle=sta_key_title
+keyValue=sta_key_value
+updateTime=sta_update_time
+dataFrom=sta_data_from
+resType=sta_res_type
 identifier=identifier
