1、 titan线程池配置提取到配置文件中 2、重连后，直接发送请求进行测试 3、本地titan压测环境，使用新申请的MySQL服务（数据已经让sdp从集成环境导入)

--- a/src/main/filters/filter-preproduction.properties
+++ b/src/main/filters/filter-preproduction.properties
@@ -124,6 +124,9 @@ junit.userId=2107144081
 
 #titan configure
 titan.domain=10.33.6.160
+#minConnectionPoolSize,maxConnectionPoolSize,nioPoolSize,workerPoolSize
+titan.search.pool.size=100,100,48,48
+titan.single.pool.size=50,50,24,24
 
 #trace
 waf.trace.enabled=true
