--- a/src/main/filters/filter-pressure.properties
+++ b/src/main/filters/filter-pressure.properties
@@ -131,6 +131,9 @@ elasticsearch.index.name=local
 
 #titan configure
 titan.domain=61.160.40.136
+#minConnectionPoolSize,maxConnectionPoolSize,nioPoolSize,workerPoolSize
+titan.search.pool.size=100,100,48,48
+titan.single.pool.size=50,50,24,24
 
 #trace
 waf.trace.enabled=false
