--- a/src/main/filters/filter-titanlocalpresurre.properties
+++ b/src/main/filters/filter-titanlocalpresurre.properties
@@ -64,15 +64,15 @@ sdp_cs_pack_api=/dentries/actions/asynpack
 
 #store sdk配置 
 jdbc.driver=com.mysql.fabric.jdbc.FabricMySQLDriver
-jdbc.url=jdbc\:mysql\:fabric\://qa1.rds.sdp.nd\:32272/prepub_mysql_esp?fabricServerGroup\=my_group_3308&fabricUsername\=admin&fabricPassword\=bqTZDiWOW0sJmeM3&useUnicode=true&characterEncoding=utf-8
-jdbc.username=user_pjha64nxyv
-jdbc.password=eK7PHVxNmI
+jdbc.url=jdbc\:mysql\:fabric\://qa1.rds.sdp.nd\:32272/prepub_mysql_titan_default?fabricServerGroup\=my_group_3308&fabricUsername\=admin&fabricPassword\=bqTZDiWOW0sJmeM3&autoReconnect\=true&useUnicode\=true&characterEncoding\=UTF8
+jdbc.username=user_c32fuexr9a
+jdbc.password=GqmbewPl2i
 
 #习题库配置
 jdbc.question.driver=com.mysql.fabric.jdbc.FabricMySQLDriver
-jdbc.question.url=jdbc\:mysql\:fabric\://qa1.rds.sdp.nd\:32272/prepub_mysql_esp_quetion?fabricServerGroup\=my_group_3308&fabricUsername\=admin&fabricPassword\=bqTZDiWOW0sJmeM3&useUnicode=true&characterEncoding=utf-8
-jdbc.question.username=user_3pkgvh9ros
-jdbc.question.password=WZqGhCJlXg
+jdbc.question.url=jdbc\:mysql\:fabric\://qa1.rds.sdp.nd\:32272/prepub_mysql_titan_question?fabricServerGroup\=my_group_3308&fabricUsername\=admin&fabricPassword\=bqTZDiWOW0sJmeM3&autoReconnect\=true&useUnicode\=true&characterEncoding\=UTF8
+jdbc.question.username=user_ub7lvkq1p3
+jdbc.question.password=fVF3UcmaiS
 
 #报表库配置
 jdbc.report.driver=com.mysql.fabric.jdbc.FabricMySQLDriver
@@ -133,7 +133,10 @@ elasticsearch.cluster.name=cl-log-01
 elasticsearch.index.name=lcms_pre1_nd_education_resource
 
 #titan configure
-titan.domain=172.24.133.42
+titan.domain=172.24.133.42,172.24.133.41,172.24.132.88,172.24.132.89
+#minConnectionPoolSize,maxConnectionPoolSize,nioPoolSize,workerPoolSize
+titan.search.pool.size=200,200,96,96
+titan.single.pool.size=50,50,24,24
 
 #trace
 waf.trace.enabled=true
