--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -75,6 +75,8 @@ elasticsearch.index.name=${elasticsearch.index.name}
 
 #titan configure
 titan.domain=${titan.domain}
+titan.search.pool.size=${titan.search.pool.size}
+titan.single.pool.size=${titan.single.pool.size}
 
 #安全认证filter的类名
 #authenticationFilterName=${authentication_filter_name}
