--- a/src/main/filters/filter-integration.properties
+++ b/src/main/filters/filter-integration.properties
@@ -134,6 +134,9 @@ elasticsearch.index.name=lcms_pre1_nd_education_resource
 
 #titan configure
 titan.domain=172.24.133.99
+#minConnectionPoolSize,maxConnectionPoolSize,nioPoolSize,workerPoolSize
+titan.search.pool.size=100,100,48,48
+titan.single.pool.size=50,50,24,24
 
 #trace
 waf.trace.enabled=true
