--- a/src/main/filters/filter-product.properties
+++ b/src/main/filters/filter-product.properties
@@ -131,6 +131,9 @@ c3p0.report.minPoolSize=20
 junit.userId=2000178486
 
 titan.domain=10.33.6.161
+#minConnectionPoolSize,maxConnectionPoolSize,nioPoolSize,workerPoolSize
+titan.search.pool.size=100,100,48,48
+titan.single.pool.size=50,50,24,24
 
 #trace
 waf.trace.enabled=true
