--- a/src/main/filters/filter-test.properties
+++ b/src/main/filters/filter-test.properties
@@ -132,6 +132,9 @@ elasticsearch.index.name=lcms_test_nd_education_resource
 
 #titan configure
 titan.domain=172.24.133.44
+#minConnectionPoolSize,maxConnectionPoolSize,nioPoolSize,workerPoolSize
+titan.search.pool.size=100,100,48,48
+titan.single.pool.size=50,50,24,24
 
 #trace
 waf.trace.enabled=false
