--- a/src/main/filters/filter-product.properties
+++ b/src/main/filters/filter-product.properties
@@ -21,6 +21,11 @@ waf.client.bearerToken.account.username=waf_loginer
 #访问UC服务的密码
 waf.client.bearerToken.account.password=80fba977d063a6f7262a8a9c95f61140
 
+#CS sdk配置
+sdp_cs_sdk_host=cs.101.com
+sdp_cs_sdk_url_protocol=http
+sdp_cs_sdk_version=v0.1
+
 #访问CS的地址
 sdp_cs_api=http://cs.101.com/v0.1
 #访问CS的service_id
