--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -17,6 +17,11 @@ smartq.uri=${smartq.uri}
 #lc 访问地址
 lcms.uri=${lcms.uri}
 
+#CS sdk配置
+sdp_cs_sdk_host=${sdp_cs_sdk_host}
+sdp_cs_sdk_url_protocol=${sdp_cs_sdk_url_protocol}
+sdp_cs_sdk_version=${sdp_cs_sdk_version}
+
 #访问CS的地址
 sdp_cs_api=${sdp_cs_api}
 #门户对应的组织
