--- a/src/main/filters/filter-development.properties
+++ b/src/main/filters/filter-development.properties
@@ -21,6 +21,11 @@ waf.client.bearerToken.account.username=waf_loginer
 #访问UC服务的密码
 waf.client.bearerToken.account.password=80fba977d063a6f7262a8a9c95f61140
 
+#CS sdk配置
+sdp_cs_sdk_host=betacs.101.com
+sdp_cs_sdk_url_protocol=http
+sdp_cs_sdk_version=v0.1
+
 #访问CS的地址
 sdp_cs_api=http://betacs.101.com/v0.1
 #访问CS的service_id
@@ -154,7 +159,7 @@ esp.category.data.admin = 136822
 #资源消费者角色
 esp.res.consumer = 136823
 #权限启用开关
-esp_authority_enable=true
+esp_authority_enable=false
 #====End===== 
 
 #消息队列RabbitMq
