--- a/src/main/filters/filter-integration.properties
+++ b/src/main/filters/filter-integration.properties
@@ -21,6 +21,11 @@ waf.client.bearerToken.account.username=waf_loginer
 #访问UC服务的密码
 waf.client.bearerToken.account.password=80fba977d063a6f7262a8a9c95f61140
 
+#CS sdk配置
+sdp_cs_sdk_host=betacs.101.com
+sdp_cs_sdk_url_protocol=http
+sdp_cs_sdk_version=v0.1
+
 #访问CS的地址
 sdp_cs_api=http://betacs.101.com/v0.1
 #访问CS的service_id
@@ -54,7 +59,6 @@ sdp_cs_ref_url=http://betacs.101.com/v0.1,http://betacs.101.com/v0.1,http://beta
 sdp_cs_ref_file_path=/prepub_content_edu/esp,/prepub_content_edu_product/esp,/preproduction_content_module_mng/test,/prepub_content_edu/icplayer/latest,/dev_content_homework,/qa_content_homework,/prepub_content_homework
 # cs打包实例对应service id
 sdp_cs_ref_service_id=a4b26064-595f-47a5-9f81-6afcb2d296c2,e49f1c47-01aa-4326-9525-ce25064ace63,40afb964-78c0-4be9-b929-3f6f909c3ecf,a4b26064-595f-47a5-9f81-6afcb2d296c2,71df41d8-496e-426e-a632-06f00c1188e3,a93358fe-8c73-4cce-85fc-55a93a8472ca,abcd9d18-0716-45e1-9933-95f77e7fdcbc
-
 
 # 调度服务任务创建url
 task_submit_utl=http://esp-async-task.beta.web.sdp.101.com/concurrent/service/proxy/submit-execution
@@ -157,7 +161,7 @@ esp.category.data.admin = 136822
 #资源消费者角色
 esp.res.consumer = 136823
 #权限启用开关
-esp_authority_enable=true
+esp_authority_enable=false
 #====End===== 
 
 #消息队列RabbitMq
